          org.opennms.protocols.icmp.IcmpSocket <host>
  Note: the libjicmp.* part matches the libjicmp shared library name,
  no matter what the architecture.  The specific library is libjicmp.so
  on most platforms and libjicmp.jnilib on Mac OS X.
- Add NSClient capsd plugin and poller monitor written by Matt Raykowski,
  <matt.raykowski@gmail.com>.  Thanks, Matt!  Enhancement bug #1389.

1.3.0 to 1.3.1
----------------------------------------------------------------------
- Added NRPE capsd plugin and add NRPE entries to capsd and poller
  configuration files.

1.2.X to 1.3.0
----------------------------------------------------------------------
- Added stylesheets to the alarm and event lists, and added a
  specific UEI filter to events.
- Added a viewer page for Alarms.
- Add CentOS 4 support to the RPM spec file.  Bug #1222.  Thanks
  Ted Kaczmarek <tedkaz@optonline.net>.
- Fix the arguments to "find" in runjava.  It should now work properly on
  Mandrake Linux.  Bug #1205.  Thanks Chris Goheen <cg@sonic.net> for
  reporting this.
- Remove the Java dependency from the RPM package.  Of the Java packages
  out there, there is no common package name or virtual package name.
  We'll let 'runjava' do the dependency checking.  Bug #1144.  Thanks
  Ted Kaczmarek <tedkaz@optonline.net> for pointing out that we should
  try to use virtual packages.
- Remove the excludes for the compilation of JSP code from Java source to
  class files.  Anything ending in '.jsp' is now compiled.  The following
  two cleanups below made this possible.
- Reorganize the filesystem layout of the webapp to fit the Sun JSP code
  conventions.  Nothing in the actual files was changed, except for
  pathnames that pointed at files which ave moved.  Reference:
  http://java.sun.com/developer/technicalArticles/javaserverpages/\
	code_convention/
- Remove the eventconf editor from the webapp as it didn't compile.
  Opened up enhancement bug #1212 suggesting that this be resurrected